public class agua implements ingrediente{
    @Override
    public void obtener_cantidad() {

    }

    @Override
    public void obtener_nombre() {

    }
    public String cantidad;

}
