public class cafe  {
    private String nombre;
    private long tamaño;
    private int precio;

    public  void preparar(){

    }
    public  void servir(){

    }

    }

