public class cafecolombiano extends cafe {
    @Override
    public void servir() {
        super.servir();
    }

    @Override
    public void preparar() {
        super.preparar();
    }

    private  String tipo_de_grano;
}
