public class empleados {
    public String nombre;
    public String puesto;

    public int salario;
    private void trabajar(){

    }
    private void tomar_orden(){

    }

}
