public class equipo {
    public String tipo;
    public String estado;
    public void encender(){

    }
    public void apagar(){

    }
    public void reparar(){

    }
}
