public class espressoitaliano extends cafe{
    @Override
    public void preparar() {
        super.preparar();
    }

    @Override
    public void servir() {
        super.servir();
    }
    public String intensidad;

}
