public class granos implements ingrediente{
    @Override
    public void obtener_nombre() {

    }

    @Override
    public void obtener_cantidad() {

    }
    public String tipo;
    public String cantidad;

}
