public interface ingrediente {
    public void obtener_nombre();
    public void obtener_cantidad();

}
