public class leche implements ingrediente{
    @Override
    public void obtener_cantidad() {

    }

    @Override
    public void obtener_nombre() {

    }
}
