public class sucursal {
    private String nombre;
    private String direccion;

    public void agregarempleado(){
    }

    public void agregaringresdiente(){
    }
    public void agregarequipo(){
    }
    public void agregarespecialidad(){
    }
}
